# maxsat_solve

./: Cargo.toml  LICENSE  README.md  run_instances.py
src/: fasttw.rs  graph.rs  main.rs  parser.rs  solver.rs
src/solvers/: dual.rs  incidence.rs  mod.rs  primal.rs
test_instances/: preprocess_test.wcnf  simple_preprocess_test.wcnf  test1.wcnf  vertex_cover_example.wcnf
