[package]
name = "maxsat_solve"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "*"
flate2 = "*"
metrohash = "*"
union-find ="*"
ambassador = "*"

anyhow = "1.0"
bit-set = "0.5.1"
num = "0.4.0"
rand = "0.8.4"
itertools = "0.10.1"
