[package]
name = "maxsat_solve"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.4"
flate2 = "1.0"
metrohash = "1.0"
union-find ="0.3"
ambassador = "0.2"
anyhow = "1.0"
num = "0.4"
rand = "0.8"
itertools = "0.10"
